k8s/inference-only/inference-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fraud-detection-inference
  namespace: fraud-detection
  labels:
    app: fraud-detection
    component: inference
spec:
  to:
    kind: Service
    name: fraud-detection-inference
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
